Start working on altered dungeons feature.

--- a/src/client/resources/assets/stashwalker/lang/en_us.json
+++ b/src/client/resources/assets/stashwalker/lang/en_us.json
@@ -3,5 +3,6 @@
   "key.stashwalker.entity_tracers": "Entity tracers toggle",
   "key.stashwalker.block_tracers": "Block tracers toggle",
   "key.stashwalker.new_chunks": "New chunks toggle",
-  "key.stashwalker.sign_reader": "Sign reader toggle"
+  "key.stashwalker.sign_reader": "Sign reader toggle",
+  "key.stashwalker.altered_dungeons": "Altered Dungeons toggle"
 }
