Multiple performance improvements. Changes Altered Dungeons feature to Altered Structures and added Altered Mines to Altered Structures feature.

--- a/src/client/resources/assets/stashwalker/lang/en_us.json
+++ b/src/client/resources/assets/stashwalker/lang/en_us.json
@@ -4,5 +4,5 @@
   "key.stashwalker.block_tracers": "Block tracers toggle",
   "key.stashwalker.new_chunks": "New chunks toggle",
   "key.stashwalker.sign_reader": "Sign reader toggle",
-  "key.stashwalker.altered_dungeons": "Altered Dungeons toggle"
+  "key.stashwalker.altered_structures": "Altered Structures toggle"
 }
